[package]
name = "splitter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
geo = "0.32.0"
clap = { version = "4.5", features = ["derive", "env"] }
geozero = { version = "0.15.1", features = ["with-geo", "with-wkb"] }
postgres = "0.19"
rusqlite = { version = "0.38.0", features = ["bundled"] }
geo-types = "0.7.18"
geo-traits = "0.3.0"
